--- a/230105_add/index.html
+++ b/230105_add/index.html
@@ -9,8 +9,8 @@
     <script type="module" src="index.js"></script>
 </head>
 <body>
-    <div id="log">log : </div>
     <div id="calcWrap">
+
         <div id="calcBtn">
             <button type="button" class="divide">/</button>
             <button type="button" class="multi">*</button>
@@ -41,6 +41,8 @@
         <div id="calcResult">
             <input type="text" class="input">
         </div>
+        <span>result:</span><span id="log"></span>
     </div>
 </body>
 </html>
+num = num * Number(input.value);
