--- a/230111/index.html
+++ b/230111/index.html
@@ -22,7 +22,6 @@
     </style>
   </head>
   <body>
-    <form action="" id="toDoList"></form>
-    <ul id="list"></ul>
+    <div id="container"></div>
   </body>
 </html>
