--- a/230128/index.html
+++ b/230128/index.html
@@ -6,26 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script type="module" src="./index.js"></script>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      ul,
-      ol,
-      dl {
-        list-style: none;
-      }
-      a {
-        text-decoration: none;
-      }
-    </style>
   </head>
   <body>
-    <table id="cartWrap">
-      <caption class="cartTitle">
-        쇼핑목록
-      </caption>
-    </table>
+    <div id="container"></div>
   </body>
 </html>
