--- a/230203/index.html
+++ b/230203/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script type="module" src="./index.js"></script>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        text-align: left;
+      }
+      a {
+        text-decoration: none;
+      }
+      ul,
+      ol,
+      dl {
+        list-style: none;
+      }
+    </style>
   </head>
   <body>
     <div id="container"></div>
