--- a/230204_2/index.html
+++ b/230204_2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,7 +7,5 @@
     <title>Document</title>
     <script type="module" src="./index.js"></script>
   </head>
-  <body>
-    <div id="container"></div>
-  </body>
+  <body></body>
 </html>
